--- a/API/API.Tests/API.Tests.csproj
+++ b/API/API.Tests/API.Tests.csproj
@@ -12,6 +12,13 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
     <ProjectReference Include="..\API\API.csproj" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.28.0.36354">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="SonarAnalyzer.CSharp" />
+  </ItemGroup>
 </Project>
