--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,12 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
+          if ("${{ steps.vars.outputs.short_ref }}" -eq "main") {
+            $configuration = "Release"
+          } else {
+            $configuration = "Debug"
+          }
+          
           .\.sonar\scanner\dotnet-sonarscanner begin `
             /k:"COSC2650_Assignment" `
             /o:"cosc2650" `
@@ -49,6 +55,6 @@ jobs:
             /d:sonar.host.url="https://sonarcloud.io" `
             /d:sonar.cs.opencover.reportsPaths="**\coverage.opencover.xml" `
             /d:sonar.coverage.exclusions="API/Program.cs","API/Startup.cs"
-          dotnet build .\API\API.sln -c Debug
-          dotnet test .\API\API.sln -c Debug /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+          dotnet build .\API\API.sln -c $configuration
+          dotnet test .\API\API.sln -c $configuration /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
