--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,5 +14,11 @@
 
   <ItemGroup>
     <None Remove="SonarAnalyzer.CSharp" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Update="Procfile">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
