--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,6 +78,6 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.7.0
         with:
-          file: API/API/Dockerfile
           push: true
           tags: mkellock/cosc2650:latest
+          directory: API/API
