--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,3 +81,15 @@ jobs:
           push: true
           tags: mkellock/cosc2650:latest
           context: ./API/API
+  deploy:
+    name: Deploy to ECS
+    runs-on: ubuntu-latest
+    needs: dockerize
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      
