--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,6 +97,8 @@ jobs:
           task-definition: task-definition.json
           container-name: Assignment
           image: ${{ steps.docker_build.outputs.digest }}
+      - name: Echo out docker metadata
+        run: echo ${{ steps.docker_build.outputs.metadata }}
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
