--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,10 +71,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: mkellock/cosc2650
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=sha
+          tags: type=sha
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -108,11 +105,11 @@ jobs:
           container-name: Assignment
           image: ${{ steps.docker_build.outputs.digest }}
       - name: Echo out docker metadata
-        run: echo "${{ steps.docker_build.outputs.metadata }}"
+        run: echo "${{ steps.meta.outputs.tags }}"
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          task-definition: mkellock/cosc2650:${{ steps.meta.outputs.tags }}
           service: ${{ secrets.ECS_SERVICE }}
           cluster: ${{ secrets.ECS_CLUSTER }}
           wait-for-service-stability: false
