--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,13 +103,13 @@ jobs:
         with:
           task-definition: task-definition.json
           container-name: Assignment
-          image: ${{ steps.docker_build.outputs.digest }}
+          image: ${{ steps.meta.outputs.tags }}
       - name: Echo out docker metadata
         run: echo "${{ steps.meta.outputs.tags }}"
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: ${{ steps.meta.outputs.tags }}
+          task-definition: task-definition.json
           service: ${{ secrets.ECS_SERVICE }}
           cluster: ${{ secrets.ECS_CLUSTER }}
           wait-for-service-stability: false
