--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,12 +101,10 @@ jobs:
           task-definition: task-definition.json
           container-name: Assignment
           image: ${{ steps.meta.outputs.tags }}
-      - name: Echo out docker metadata
-        run: echo "${{ steps.meta.outputs.tags }}"
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: task-definition.json
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: ${{ secrets.ECS_SERVICE }}
           cluster: ${{ secrets.ECS_CLUSTER }}
           wait-for-service-stability: false
