--- a/API/API/Dockerfile
+++ b/API/API/Dockerfile
@@ -14,14 +14,13 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/aspnet:3.1
 
 # Install the agent
-RUN apt-get update && apt-get install -y wget ca-certificates gnupg
-RUN echo 'deb http://apt.newrelic.com/debian/ newrelic non-free' | tee /etc/apt/sources.list.d/newrelic.list
-RUN wget https://download.newrelic.com/548C16BF.gpg
-RUN apt-key add 548C16BF.gpg
-RUN apt-get update
-RUN apt-get upgrade -y
-RUN apt-get install -y newrelic-netcore20-agent
-RUN rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y wget ca-certificates gnupg \
+&& echo 'deb http://apt.newrelic.com/debian/ newrelic non-free' | tee /etc/apt/sources.list.d/newrelic.list \
+&& wget https://download.newrelic.com/548C16BF.gpg \
+&& apt-key add 548C16BF.gpg \
+&& apt-get update \
+&& apt-get install -y newrelic-netcore20-agent \
+&& rm -rf /var/lib/apt/lists/*
 
 # Enable the agent
 ENV CORECLR_ENABLE_PROFILING=1 \
@@ -32,7 +31,6 @@ NEW_RELIC_LICENSE_KEY=3c9e5c618f31bf7394bb19e370a40ef5d2dfNRAL \
 NEW_RELIC_APP_NAME="API"
 
 # Set the working directory and copy thr build assets
-WORKDIR /app
 COPY --from=build-env /build-context/out .
 
 # Expose port 80
