--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,66 +3,11 @@ on: push
 jobs:
   build:
     name: Build
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: 11
-          distribution: "zulu"
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v2
-        with:
-          path: ~\sonar\cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache SonarCloud scanner
-        id: cache-sonar-scanner
-        uses: actions/cache@v2
-        with:
-          path: .\.sonar\scanner
-          key: ${{ runner.os }}-sonar-scanner
-          restore-keys: ${{ runner.os }}-sonar-scanner
-      - name: Install SonarCloud scanner
-        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-        shell: powershell
-        run: |
-          New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-      - name: Build and analyze
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        shell: powershell
-        run: |
-          if ([System.Environment]::GetEnvironmentVariable('GITHUB_REF') -eq "refs/heads/main") {
-            $configuration = "Release"
-          } else {
-            $configuration = "Debug"
-          }
-
-          Write-Host "Building $($configuration) configuration"
-
-          .\.sonar\scanner\dotnet-sonarscanner begin `
-            /k:"COSC2650_Assignment" `
-            /o:"cosc2650" `
-            /d:sonar.login="${{ secrets.SONAR_TOKEN }}" `
-            /d:sonar.host.url="https://sonarcloud.io" `
-            /d:sonar.cs.opencover.reportsPaths="**\coverage.opencover.xml" `
-            /d:sonar.coverage.exclusions="API/Program.cs","API/Startup.cs"
-          dotnet build .\API\API.sln -c $configuration
-          dotnet test .\API\API.sln -c $configuration /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/master'
-    steps:
-      - uses: actions/checkout@v2
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v3
@@ -85,7 +30,17 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          context: ./API/API
+          secrets: |
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            sonar_token: ${{ secrets.SONAR_TOKEN }}
+            github_ref: ${{ github.ref }}
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: build
+    #if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v2
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
