--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,9 +31,9 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            sonar_token: ${{ secrets.SONAR_TOKEN }}
-            github_ref: ${{ github.ref }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            GITHUB_REF: ${{ github.ref }}
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
