--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    outputs: 
+      image: steps.meta.outputs.tags
     steps:
       - uses: actions/checkout@v2
         with:
@@ -55,7 +57,7 @@ jobs:
         with:
           task-definition: task-definition.json
           container-name: Assignment
-          image: ${{ steps.meta.outputs.tags }}
+          image: ${{ needs.build.outputs.image }}
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
