--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     outputs: 
-      image: steps.meta.outputs.tags
+      image: ${{ steps.meta.outputs.tags }}
     steps:
       - uses: actions/checkout@v2
         with:
