--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     outputs: 
-      image: ${{ steps.meta.outputs.tags }}
+      digest: ${{ steps.meta.outputs.digest }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -56,10 +56,12 @@ jobs:
           task-definition: ./IaC/ECS/task-definition.json
           container-name: Assignment
           image: ${{ needs.build.outputs.image }}
+      - name: Export sha
+        run: echo "mkellock/cosc2650:${{ steps.task-def.outputs.digest }}"
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          task-definition: mkellock/cosc2650:${{ steps.task-def.outputs.digest }}
           service: ${{ secrets.ECS_SERVICE }}
           cluster: ${{ secrets.ECS_CLUSTER }}
           wait-for-service-stability: false
