--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     outputs: 
-      digest: ${{ steps.meta.outputs.digest }}
+      digest: ${{ steps.docker_build.outputs.digest }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -57,11 +57,11 @@ jobs:
         with:
           task-definition: ./IaC/ECS/task-definition.json
           container-name: Assignment
-          image: ${{ needs.build.outputs.image }}
+          image: mkellock/cosc2650:${{ needs.build.outputs.digest }}
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: mkellock/cosc2650:${{ steps.task-def.outputs.digest }}
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: ${{ secrets.ECS_SERVICE }}
           cluster: ${{ secrets.ECS_CLUSTER }}
           wait-for-service-stability: false
