--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,8 @@ jobs:
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}]
             SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}
             GITHUB_REF=${{ github.ref }}
+      - name: Export digest
+        run: echo "${{ steps.docker_build.outputs.digest }}"
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
@@ -44,7 +46,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Export sha
-        run: echo "mkellock/cosc2650:${{ steps.task-def.outputs.digest }}"
+        run: echo "mkellock/cosc2650:${{ needs.build.outputs.digest }}"
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
