--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    outputs: 
+    outputs:
       digest: ${{ steps.docker_build.outputs.digest }}
     steps:
       - uses: actions/checkout@v2
@@ -39,6 +39,7 @@ jobs:
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}]
             SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}
             GITHUB_REF=${{ github.ref }}
+            NEW_RELIC_LICENSE_KEY=${{ secrets.NEW_RELIC_LICENCE_KEY }}
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
