--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,12 +39,11 @@ jobs:
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}]
             SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}
             GITHUB_REF=${{ github.ref }}
-            NEW_RELIC_LICENSE_KEY=${{ secrets.NEW_RELIC_LICENCE_KEY }}
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/master'
+    #if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
       - name: Configure AWS credentials
@@ -58,8 +57,10 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: ./IaC/ECS/task-definition.json
-          container-name: Assignment
+          container-name: API
           image: mkellock/cosc2650@${{ needs.build.outputs.digest }}
+          environment: |
+            NEW_RELIC_LICENSE_KEY=${{ secrets.NEW_RELIC_LICENCE_KEY }}
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
