--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,19 +52,14 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: ./IaC/ECS/task-definition.json
-          container-name: Assignment
-          image: mkellock/cosc2650@${{ needs.build.outputs.digest }}
-          environment: |
-            NEW_RELIC_LICENSE_KEY=${{ secrets.NEW_RELIC_LICENCE_KEY }}
+      - name: Update ECS image
+        run: echo "$(jq ".containerDefinitions[0].image=\"mkellock/cosc2650@${{ needs.build.outputs.digest }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
+      - name: Update ECS New Relic licence key
+        run: echo "$(jq ".containerDefinitions[0].environment=[{\"NEW_RELIC_LICENSE_KEY\":\"${{ secrets.NEW_RELIC_LICENCE_KEY }}\"}]" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          task-definition: ./IaC/ECS/task-definition.json
           service: ${{ secrets.ECS_SERVICE }}
           cluster: ${{ secrets.ECS_CLUSTER }}
           wait-for-service-stability: false
