--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Update ECS image
         run: echo "$(jq ".containerDefinitions[0].image=\"mkellock/cosc2650@${{ needs.build.outputs.digest }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
       - name: Update ECS New Relic licence key
-        run: echo "$(jq ".containerDefinitions[0].environment=[{\"NEW_RELIC_LICENSE_KEY\":\"${{ secrets.NEW_RELIC_LICENCE_KEY }}\"}]" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
+        run: echo "$(jq ".containerDefinitions[0].environment[0].value=\"${{ secrets.NEW_RELIC_LICENCE_KEY }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
