--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -12,16 +12,22 @@
     </PackageReference>
     <PackageReference Include="NewRelic.Agent" Version="8.41.1" />
     <PackageReference Include="NewRelic.Agent.Api" Version="8.41.1" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
+    <PackageReference Include="NLog" Version="4.7.11" />
+    <PackageReference Include="NewRelic.LogEnrichers.NLog" Version="1.2.1" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="SonarAnalyzer.CSharp" />
     <None Remove="NewRelic.Agent" />
     <None Remove="NewRelic.Agent.Api" />
+    <None Remove="NLog.Web.AspNetCore" />
+    <None Remove="NLog" />
+    <None Remove="NewRelic.LogEnrichers.NLog" />
   </ItemGroup>
-  
+
   <ItemGroup>
-    <None Update="Procfile">
+    <None Update="nlog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
