--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -1,10 +1,8 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Trace",
+            "Microsoft": "Information"
+        }
     }
-  },
-  "AllowedHosts": "*"
 }
