Fixing bug with logging

--- a/API/API/nlog.config
+++ b/API/API/nlog.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true" internalLogLevel="Info" internalLogFile="/var/log/nlog.log">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true" internalLogLevel="Info" internalLogToConsole="true" internalLogToConsoleError="true" internalLogFile="/var/log/internal-nlog.log">
 
   <!-- enable asp.net core layout renderers -->
   <extensions>
@@ -16,10 +16,12 @@
         </layout>
       </target>
     </target>
+    <target name="console" xsi:type="Console"/>
   </targets>
 
   <!-- rules to map from logger name to target -->
   <rules>
     <logger name="*" minlevel="Trace" writeTo="async" />
+    <logger name="*" minlevel="Trace" writeTo="console" />
   </rules>
 </nlog>
