--- a/API/API/nlog.config
+++ b/API/API/nlog.config
@@ -11,7 +11,7 @@
   <!-- the targets to write to -->
   <targets>
     <target xsi:type="AsyncWrapper" name="async">
-      <target name="NewRelicLogFile" xsi:type="File" fileName="/var/log/apilog.json">
+      <target name="NewRelicLogFile" xsi:type="Console">
         <layout xsi:type="newrelic-jsonlayout">
         </layout>
       </target>
@@ -22,6 +22,5 @@
   <!-- rules to map from logger name to target -->
   <rules>
     <logger name="*" minlevel="Trace" writeTo="async" />
-    <logger name="*" minlevel="Trace" writeTo="console" />
   </rules>
 </nlog>
