--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         name: Deploy
         runs-on: ubuntu-latest
         needs: build
-        if: github.ref == 'refs/heads/main'
+        #if: github.ref == 'refs/heads/main'
         steps:
             - uses: actions/checkout@v2
             - name: Configure AWS credentials
