--- a/API/API/nlog.config
+++ b/API/API/nlog.config
@@ -17,7 +17,7 @@
         </layout>
       </target>
     </target>
-    <target xsi:type="Sentry" name="sentry" dsn="https://4a7cc7c8643d4dcfa906821454a0b1d4@o1005023.ingest.sentry.io/5965934" layout="${message}" environment="Development" breadcrumbLayout="${message}" minimumBreadcrumbLevel="Debug" minimumEventLevel="Error">
+    <target xsi:type="Sentry" name="sentry" dsn="https://4a7cc7c8643d4dcfa906821454a0b1d4@o1005023.ingest.sentry.io/5965934" layout="${message}" environment="Development" breadcrumbLayout="${message}" minimumBreadcrumbLevel="Debug" minimumEventLevel="Error" InitializeSdk="true">
 
       <!-- Advanced options can be configured here-->
       <options sendDefaultPii="true" attachStacktrace="true" shutdownTimeoutSeconds="5" debug="false">
