Fixing issue with Sentry

--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -4,5 +4,15 @@
             "Default": "Trace",
             "Microsoft": "Information"
         }
+    },
+    "Sentry": {
+        "Dsn": "https://4a7cc7c8643d4dcfa906821454a0b1d4@o1005023.ingest.sentry.io/5965934",
+        "MaxRequestBodySize": "Always",
+        "SendDefaultPii": true,
+        "MinimumBreadcrumbLevel": "Debug",
+        "MinimumEventLevel": "Warning",
+        "AttachStackTrace": true,
+        "Debug": true,
+        "DiagnosticsLevel": "Error"
     }
 }
