Adding Sentry GitHub Actions support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,16 @@ jobs:
                       GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}]
                       SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}
                       GITHUB_REF=${{ github.ref }}
+            - name: Create a Sentry.io release
+              uses: tclindner/sentry-releases-action@v1.2.0
+              env:
+                SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+                SENTRY_ORG: cosc2650
+                SENTRY_PROJECT: assignment
+              with:
+                tagName: ${{ github.ref }}
+                environment: Production
+
     deploy:
         name: Deploy
         runs-on: ubuntu-latest
