--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,28 @@
 name: Build
 on: push
-jobs:
-    build:
-        name: Build
+jobs
+    files_changed:
+      name: Check changes
+      runs-on: ubuntu-latest
+      outputs:
+          api_changes: ${{ steps.api_changes.outputs.src }}
+          ui_changes: ${{ steps.api_changes.outputs.src }}
+      steps:
+      - uses: dorny/paths-filter@v2
+        id: api_changes
+        with:
+          filters: |
+            src:
+              - 'API/**'
+              - Dockerfile
+      - uses: dorny/paths-filter@v2
+        id: ui_changes
+        with:
+          filters: |
+            src:
+              - 'UI/**'
+    build_api:
+        name: Build API
         runs-on: ubuntu-latest
         outputs:
             digest: ${{ steps.docker_build.outputs.digest }}
@@ -49,8 +69,8 @@ jobs:
                 version: ${{ github.sha }}
                 environment: 'Production'
                 ignore_empty: true
-    deploy:
-        name: Deploy
+    deploy_api:
+        name: Deploy API
         runs-on: ubuntu-latest
         needs: build
         if: github.ref == 'refs/heads/main'
