--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,7 @@ jobs:
   deploy_api:
       name: Deploy API
       runs-on: ubuntu-latest
-      needs: build
+      needs: build_api
       if: github.ref == 'refs/heads/main'
       steps:
           - uses: actions/checkout@v2
