--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,8 @@ jobs:
   build_api:
       name: Build API
       runs-on: ubuntu-latest
+      needs: files_changed
+      if: needs.files_changed.api_changes.src == 'true'
       outputs:
           digest: ${{ steps.docker_build.outputs.digest }}
       steps:
