--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,3 +96,51 @@ jobs:
                 service: ${{ secrets.ECS_SERVICE }}
                 cluster: ${{ secrets.ECS_CLUSTER }}
                 wait-for-service-stability: false
+  build_ui:
+      name: Build UI
+      runs-on: ubuntu-latest
+      needs: files_changed
+      if: needs.files_changed.ui_changes.src == 'true'
+      steps:
+          - uses: actions/checkout@v2
+            with:
+                fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+          - name: Docker meta
+            id: meta
+            uses: docker/metadata-action@v3
+            with:
+                images: mkellock/cosc2650
+                tags: |
+                    type=sha
+                    type=ref,event=branch
+                    type=ref,event=pr
+          - name: Set up QEMU
+            uses: docker/setup-qemu-action@v1
+          - name: Set up Docker Buildx
+            uses: docker/setup-buildx-action@v1
+          - name: Login to DockerHub
+            uses: docker/login-action@v1
+            with:
+                username: ${{ secrets.DOCKERHUB_USERNAME }}
+                password: ${{ secrets.DOCKERHUB_TOKEN }}
+          - name: Build and push Docker images
+            id: docker_build
+            uses: docker/build-push-action@v2.7.0
+            with:
+                push: true
+                tags: ${{ steps.meta.outputs.tags }}
+                labels: ${{ steps.meta.outputs.labels }}
+                build-args: |
+                    GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}]
+                    SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}
+                    GITHUB_REF=${{ github.ref }}
+          - name: Create a Sentry.io release
+            uses: getsentry/action-release@v1
+            env:
+              SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+              SENTRY_ORG: cosc2650
+              SENTRY_PROJECT: assignment
+            with:
+              version: ${{ github.sha }}
+              environment: 'Production'
+              ignore_empty: true
