--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         name: Build API
         runs-on: ubuntu-latest
         needs: files_changed
-        if: needs.files_changed.api_changes == 'true'
+        if: needs.files_changed.outputs.api_changes == 'true'
         outputs:
             digest: ${{ steps.docker_build.outputs.digest }}
         steps:
@@ -96,7 +96,7 @@ jobs:
         name: Build UI
         runs-on: ubuntu-latest
         needs: files_changed
-        if: needs.files_changed.ui_changes == 'true'
+        if: needs.files_changed.outputs.ui_changes == 'true'
         steps:
             - uses: actions/checkout@v2
               with:
