--- a/IaC/Traefik/Dockerfile
+++ b/IaC/Traefik/Dockerfile
@@ -1,11 +1,16 @@
 FROM traefik:2.5.3
 
 # Add the configuration files
-RUN mkdir -p /etc/traefik/dynamic \ 
+RUN mkdir -p /etc/traefik \ 
         && touch /etc/traefik/acme.json \
         && chmod 600 /etc/traefik/acme.json \
         && echo $'[log] \n\
   level = "WARN" \n\
+\n\
+[providers] \n\
+  [providers.ecs] \n\
+    autoDiscoverClusters = true \n\
+\n\
 [entryPoints] \n\
   [entryPoints.https] \n\
     address = ":443" \n\
