--- a/IaC/Traefik/Dockerfile
+++ b/IaC/Traefik/Dockerfile
@@ -5,15 +5,18 @@ RUN mkdir -p /etc/traefik \
         && touch /etc/traefik/acme.json \
         && chmod 600 /etc/traefik/acme.json \
         && echo $'[log] \n\
-  level = "WARN" \n\
+  level = "DEBUG" \n\
 \n\
 [providers] \n\
   [providers.ecs] \n\
     exposedByDefault = false \n\
 \n\
-[entryPoints] \n\
-  [entryPoints.websecure] \n\
-    address = ":443" \n\
+[entryPoints]\n\
+  [entryPoints.web]\n\
+    address = ":80"\n\
+\n\
+  [entryPoints.websecure]\n\
+    address = ":443"\n\
 \n\
 [certificatesResolvers.letsEncrypt.acme] \n\
   email = "s3812552@student.rmit.edu.au" \n\
