--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -17,6 +17,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "BankContext": "Server=cosc2650.cl00c6onjmtb.ap-southeast-2.rds.amazonaws.com;Database=cosc2650;uid=admin;pwd=VKy5pTB44UvXpB;MultipleActiveResultSets=true"
+        "BankContext": "Server=cosc2650.cl00c6onjmtb.ap-southeast-2.rds.amazonaws.com;Database=cosc2650;uid=admin;pwd=;MultipleActiveResultSets=true"
     }
 }
