Revert "Merge branch 'main' into API"
This reverts commit 539fe59998409bcaebe16592d1baffdecfa8d3df, reversing
changes made to d1c7b09ee4343ebd05925e1c6166d228e3df40db.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,6 @@
 {
     "version": "0.2.0",
     "configurations": [
-
         {
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
@@ -11,7 +10,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/API/API/bin/Debug/net5.0/API.dll",
+            "program": "${workspaceFolder}/API/API/bin/Debug/netcoreapp3.1/API.dll",
             "args": [],
             "cwd": "${workspaceFolder}/API/API",
             "stopAtEntry": false,
