--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,5 @@
 name: Build
-on:
-    push:
-        branches:
-            - master
-    pull_request:
-        types: [opened, synchronize, reopened]
+on: push
 jobs:
     files_changed:
         name: Check changes
@@ -23,75 +18,18 @@ jobs:
                         - Dockerfile
                       ui_changes:
                         - 'UI/**'
-    sonar_scan:
-        name: Build and SonarCloud Scan
+    build_api:
+        name: Build API
         runs-on: ubuntu-latest
         needs: files_changed
         if: needs.files_changed.outputs.api_changes == 'true'
         outputs:
             result: ${{ job.status }}
-        steps:
-            - name: Set up JDK 11
-              uses: actions/setup-java@v1
-              with:
-                  java-version: 1.11
-            - uses: actions/checkout@v2
-              with:
-                  fetch-depth: 0
-            - name: Cache SonarCloud packages
-              uses: actions/cache@v1
-              with:
-                  path: ~/sonar/cache
-                  key: ${{ runner.os }}-sonar
-                  restore-keys: ${{ runner.os }}-sonar
-            - name: Cache SonarCloud scanner
-              id: cache-sonar-scanner
-              uses: actions/cache@v1
-              with:
-                  path: ./.sonar/scanner
-                  key: ${{ runner.os }}-sonar-scanner
-                  restore-keys: ${{ runner.os }}-sonar-scanner
-            - name: Install SonarCloud scanner
-              if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-              run: |
-                  if [ ! -d ./.sonar/scanner ]; then mkdir -p ./.sonar/scanner; fi 
-                  dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
-            - name: Build and analyze
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
-                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-              run: |
-                  ./.sonar/scanner/dotnet-sonarscanner begin /k:"COSC2650_Assignment" /o:"cosc2650" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" /d:sonar.coverage.exclusions="API/Program.cs","API/Startup.cs","API/Migrations/*"
-
-                  if [ "$GITHUB_REF" = "refs/heads/main" ]; then configuration="Release"; else configuration="Debug"; fi
-
-                  dotnet clean ./API/API.sln
-                  dotnet build ./API/API.sln -c "$configuration"
-                  dotnet test ./API/API.sln -c "$configuration" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
-                  dotnet publish ./API/API/API.csproj -c "$configuration" -o out
-
-                  ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-            - name: Upload API
-              uses: actions/upload-artifact@v2
-              with:
-                  name: API
-                  path: |
-                      ./out/**/*
-                      Dockerfile
-    build_api:
-        name: Build API
-        runs-on: ubuntu-latest
-        needs: sonar_scan
-        if: needs.files_changed.outputs.api_changes == 'true'
-        outputs:
-            result: ${{ job.status }}
             digest: ${{ steps.docker_build.outputs.digest }}
         steps:
-            - name: Download API
-              uses: actions/download-artifact@v2
+            - uses: actions/checkout@v2
               with:
-                  name: API
-                  path: .
+                  fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
             - name: Docker meta
               id: meta
               uses: docker/metadata-action@v3
@@ -118,7 +56,19 @@ jobs:
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
                   build-args: |
+                      GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}]
+                      SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}
                       GITHUB_REF=${{ github.ref }}
+            - name: Create a Sentry.io release
+              uses: getsentry/action-release@v1
+              env:
+                  SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+                  SENTRY_ORG: cosc2650
+                  SENTRY_PROJECT: assignment
+              with:
+                  version: ${{ github.sha }}
+                  environment: "Production"
+                  ignore_empty: true
     deploy_api:
         name: Deploy API
         runs-on: ubuntu-latest
@@ -149,16 +99,6 @@ jobs:
                   service: ${{ secrets.ECS_SERVICE }}
                   cluster: ${{ secrets.ECS_CLUSTER }}
                   wait-for-service-stability: false
-            - name: Create a Sentry.io release
-              uses: getsentry/action-release@v1
-              env:
-                  SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-                  SENTRY_ORG: cosc2650
-                  SENTRY_PROJECT: assignment
-              with:
-                  version: ${{ github.sha }}
-                  environment: "Production"
-                  ignore_empty: true
     build_ui:
         name: Build UI
         runs-on: ubuntu-latest
@@ -174,7 +114,7 @@ jobs:
               with:
                   fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
             - name: Setup Node.js environment
-              uses: actions/setup-node@v2.4.1
+              uses: actions/setup-node@v2.4.0
             - run: npm ci
             - run: npm run build --if-present
             - run: npm test
@@ -211,9 +151,9 @@ jobs:
         name: Finalise
         runs-on: ubuntu-latest
         if: always()
-        needs: [build_ui, deploy_ui, build_api, deploy_api, sonar_scan]
+        needs: [build_ui, deploy_ui, build_api, deploy_api]
         steps:
             - name: Invalidate pipeline
-              if: ${{ needs.sonar_scan.outputs.result == 'failure' || needs.build_ui.outputs.result == 'failure' || needs.deploy_ui.outputs.result == 'failure' || needs.build_api.outputs.result == 'failure' || needs.deploy_api.outputs.result == 'failure' }}
+              if: ${{ needs.build_ui.outputs.result == 'failure' || needs.deploy_ui.outputs.result == 'failure' || needs.build_api.outputs.result == 'failure' || needs.deploy_api.outputs.result == 'failure' }}
               run: |
                   exit 1
